fix container and spacing styles

--- a/blogstyle.css
+++ b/blogstyle.css
@@ -2,8 +2,12 @@ body {
   background: #eee;
 }
 
+* {
+  box-sizing: border-box;
+}
+
 div {
-  border: 1px solid black;
+  border: 0px solid black;
 }
 
 .container,
@@ -22,8 +26,7 @@ footer .row {
   color: white;
 }
 
-.container-carousel,
-.container-fluid {
+.container-carousel {
   background: #3399cc;
   padding: 40px;
 }
@@ -44,7 +47,7 @@ a:hover {
 .container-fluid {
   background: #ffffff;
   margin: 40px auto 10px;
-  padding: 20px 40px 0;
+  padding: 0px 0px 0;
   max-width: 960px;
   box-shadow: 0 1px 1px rgba(0, 0, 0, 0.1);
 }
@@ -52,7 +55,7 @@ a:hover {
 /* Page Header */
 .page-header {
   background: #f9f9f9;
-  margin: -30px -40px 40px;
+  margin: 0px 0px 40px;
   padding: 20px 40px;
   border-top: 4px solid #ccc;
   color: #999;
@@ -80,6 +83,7 @@ a:hover {
 }
 
 .caption h4 {
+  padding-top: 0.3rem;
   font-size: 1rem;
   color: #444;
 }
@@ -103,12 +107,13 @@ a:hover {
   display: inline-block;
   font-size: 34px;
   font-weight: 200;
-  line-height: 18px;
+  line-height: 1em;
+  color: #fff;
   opacity: 0.5;
-  padding: 4px 10px 0px;
+  padding: 2px 10px 2px;
   position: static;
-  height: 30px;
-  width: 15px;
+  height: auto;
+  width: 30px;
 }
 
 /* Footer */
